--- a/client/src/components/styles/profilePage.css
+++ b/client/src/components/styles/profilePage.css
@@ -30,13 +30,13 @@
 
     color: #333333;
 }
-#sub
+#subb
 {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
     font-size: 25px;
-    
+    margin-left: 3rem;
     letter-spacing: -0.015em;
 
     color: #333333;
